* V1.8.5.3
  * started new development version

* V1.8.5 
  * do not crash if renewing repo while staying inside it
  * fixed bug in "system_with_timeout" (was always returning error) - required by ck-clsmith
  * added "skip_sort" to "select" and "select_uoa" functions
  * added cfg['internal_keys'] to be able to check them in input
  * fixed minor bug when @file.json from CMD not found

* V1.8.4
  * fixed 'ck status' and version comparison
  * minor fix when listing all modules in mediawiki format

* V1.8.3dev
  * fixed minor issue in ck.list_all_files() with 'limit' parameter

* V1.8.2
  * fixed bug in 'remove_action' in CK kernel
  * fixed issue in "run_and_get_stdout" on Windows
  * printing module UOA in square brackets when error (useful for debugging)
  * added 'shell' parameter to kernel 'run_and_get_stdout' function
    (needed for ck-crowdnode)
  * added 'eout' function to kernel to print to stderr
    (useful for ck-crowdnode-server)

* V1.8.1
  * added continuous integration via Travis (Linux) and AppVeyor (Windows)
  * added CoverAlls to measure test coverage
  * added possibility to skip listing of all modules from private repositories
  * fixed error in 'ck edit'
  * unitests added (we now support Python 2.7 and 3.3+)
  * added 'dump_json' instead of 'dumps_json'

* V1.7.4
  * extended run_and_get_stdout kernel function 
  * fixed problem in run_and_get_stdout (ValueError: I/O operation on closed file)
  * fixed problem with --help or --get_api from kernel

* V1.7.3
  * fixed rare bug when 'return' is non-integer in remote CK access (such as during crowd-tuning and crowd-testing)
  * fixed copying to clipboard on Windows
  * fixed __init__.py when using CK from scripts/ipython/jupyter (calling init())
  * added ck.jerr(r) - print error with raise KeyboardInterrupt for Jupyter Notebooks
  * fixed major problem with using CK without CK_ROOT env, i.e. from python scripts or Jupyter Notebooks