@@ -1,20 +1,20 @@
 {
-  "backup_data_uid": "b1e99f6461424276", 
-  "backup_module_uid": "032630d041b4fd8a", 
-  "backup_module_uoa": "module", 
+  "backup_data_uid": "b1e99f6461424276",
+  "backup_module_uid": "032630d041b4fd8a",
+  "backup_module_uoa": "module",
   "control": {
-    "author": "Grigori Fursin", 
-    "author_email": "Grigori.Fursin@cTuning.org", 
-    "author_webpage": "http://cTuning.org/lab/people/gfursin", 
-    "copyright": "See CK COPYRIGHT.txt for copyright details", 
-    "engine": "CK", 
-    "iso_datetime": "2014-12-06T15:37:32.348000", 
-    "license": "See CK LICENSE.txt for licensing details", 
+    "author": "Grigori Fursin",
+    "author_email": "Grigori.Fursin@cTuning.org",
+    "author_webpage": "http://cTuning.org/lab/people/gfursin",
+    "copyright": "See CK COPYRIGHT.txt for copyright details",
+    "engine": "CK",
+    "iso_datetime": "2014-12-06T15:37:32.348000",
+    "license": "See CK LICENSE.txt for licensing details",
     "version": [
-      "0", 
-      "9", 
+      "0",
+      "9",
       "4113"
     ]
-  }, 
+  },
   "data_name": "kernel"
 }
