@@ -3,13 +3,13 @@
     "setup": {
       "desc": "setup CK (user, license, indexing, web service, etc)"
     }
-  }, 
-  "copyright": "See CK COPYRIGHT.txt for copyright details", 
-  "desc": "kernel configuration", 
-  "developer": "Grigori Fursin", 
-  "developer_email": "Grigori.Fursin@cTuning.org", 
-  "developer_webpage": "http://cTuning.org/lab/people/gfursin", 
-  "license": "See CK LICENSE.txt for licensing details", 
+  },
+  "copyright": "See CK COPYRIGHT.txt for copyright details",
+  "desc": "kernel configuration",
+  "developer": "Grigori Fursin",
+  "developer_email": "Grigori.Fursin@cTuning.org",
+  "developer_webpage": "http://cTuning.org/lab/people/gfursin",
+  "license": "See CK LICENSE.txt for licensing details",
   "module_deps": {
     "repo": "befd7892b0d469e9"
   }
