@@ -1,5 +1,10 @@
 * V1.8.5.3
-  * started new development version
+  * added direct update of kernel vars via CMD similar to Git. For example:
+    $ ck setup kernel --var.default_license="See CK LICENSE.txt for licensing details"
+    $ ck setup kernel --var.default_copyright="See CK COPYRIGHT.txt for copyright details"
+    $ ck setup kernel --var.default_developer="cTuning foundation"
+    $ ck setup kernel --var.default_developer_email="admin@cTuning.org"
+    $ ck setup kernel --var.default_developer_webpage="http://cTuning.org"
 
 * V1.8.5 
   * do not crash if renewing repo while staying inside it
